chore: prepare for release v0.1.5

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -65,6 +65,8 @@ jobs:
         env:
           CLI_PROXY_TARGET_ARCH: ${{ matrix.asset_arch }}
           GH_TOKEN: ${{ github.token }}
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: bun run tauri build --ci -t "${{ matrix.target }}"
 
       - name: Upload workflow artifact
@@ -75,6 +77,9 @@ jobs:
           path: |
             src-tauri/target/${{ matrix.target }}/release/bundle/appimage/*.AppImage
             src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.tar.gz
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.zip
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.sig
 
       - name: Upload to GitHub release (optional)
         if: ${{ inputs.release_tag != '' }}
@@ -84,4 +89,7 @@ jobs:
           gh release upload "${{ inputs.release_tag }}" \
             src-tauri/target/${{ matrix.target }}/release/bundle/appimage/*.AppImage \
             src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb \
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.tar.gz \
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.zip \
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.sig \
             --clobber
