--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -57,6 +57,8 @@ jobs:
         env:
           CLI_PROXY_TARGET_ARCH: ${{ matrix.asset_arch }}
           GH_TOKEN: ${{ github.token }}
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         run: bun run tauri build --ci -t "${{ matrix.target }}"
 
       - name: Upload workflow artifact
@@ -67,6 +69,8 @@ jobs:
           path: |
             src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe
             src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.zip
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.sig
 
       - name: Upload to GitHub release (optional)
         if: ${{ inputs.release_tag != '' }}
@@ -77,4 +81,6 @@ jobs:
           gh release upload "${{ inputs.release_tag }}" \
             src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe \
             src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi \
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.zip \
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*.sig \
             --clobber
