--- a/package.json
+++ b/package.json
@@ -18,17 +18,24 @@
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-store": "^2.4.2",
     "@tauri-apps/plugin-updater": "^2.10.0",
-    "lucide-react": "^0.563.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.575.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.2.0",
     "@tauri-apps/cli": "^2.10.0",
+    "@types/node": "^25.3.0",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
+    "shadcn": "^3.8.5",
     "tailwindcss": "4.2.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
     "vite": "^7.3.1"
   }
